snapshots/parsers/cst/option_statements/option_base_in_module.snap
---
source: src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AttributeStatement
      children:
        - kind: AttributeKeyword
          text: Attribute
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: VB_Name
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Module1\""
        - kind: Newline
          text: "\n"
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: BaseKeyword
          text: Base
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "1"
        - kind: Newline
          text: "\n"
