snapshots/parsers/cst/option_statements/option_base_with_comment.snap
---
source: src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: BaseKeyword
          text: Base
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "0"
        - kind: Whitespace
          text: " "
        - kind: EndOfLineComment
          text: "' Set default array base"
        - kind: Newline
          text: "\n"
